# fundpal

./: .gitignore  README.md
backend/: README.md  financial_logic.py  main.py  migrate_auth.py  migrate_investments.py  pyproject.toml  requirements.txt  test_backend.py  test_debug_flow.py  test_insights.py  test_interactive_flow.py  test_output.txt  verify_and_migrate.py
backend/agents/: allocation.py  coach.py  observer.py  orchestrator.py  planner.py  safety.py  tools.py
backend/database/: create_portfolio_table.py  queries.py  schema.py
backend/routes/: auth.py  bills.py  chat.py  dashboard.py  debts.py  goals.py  insights.py  investments.py  onboarding.py  payment.py  transactions.py
backend/services/: market_data.py  portfolio.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/Auth/: LoginScreen.jsx  SignupScreen.jsx
frontend/src/components/Chat/: ChatInput.jsx  ChatScreen.jsx  MessageBubble.jsx  QuickActions.jsx
frontend/src/components/Dashboard/: CategoryChart.jsx  (+3 more)
frontend/src/hooks/: useChat.js
frontend/src/store/: useStore.js
mobile/: App.js  package-lock.json  package.json  test_config.js
mobile/src/api/: client.js
mobile/src/hooks/: useChat.js
mobile/src/lib/: tailwind.js
mobile/src/navigation/: TabNavigator.js
mobile/src/screens/: ChatScreen.js  DashboardScreen.js  GoalsScreen.js  InsightsScreen.js  InvestmentsScreen.js  LoginScreen.js  PaymentWebViewScreen.js  ProfileScreen.js  SignupScreen.js  TransactionsScreen.js
mobile/src/store/: useStore.js
(+27 files in other folders)
